[gd_scene load_steps=13 format=2]

[ext_resource path="res://CascadiaCode.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BUTTONS.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
extra_spacing_top = 4
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="TextEdit" type="TextEdit" parent="Control"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
syntax_highlighting = true
show_line_numbers = true
caret_blink = true

[node name="Panel" type="Panel" parent="Control"]
margin_right = 1024.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 3 )

[node name="Save" type="Button" parent="Control/Panel"]
margin_left = 473.0
margin_right = 599.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( -231, -129 )
focus_mode = 0
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
action_mode = 0
enabled_focus_mode = 0
text = "Save File"

[node name="Open" type="Button" parent="Control/Panel"]
margin_left = 614.0
margin_right = 740.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( -231, -129 )
focus_mode = 0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
action_mode = 0
enabled_focus_mode = 0
text = "Open File"

[node name="SaveAs" type="Button" parent="Control/Panel"]
margin_left = 757.0
margin_right = 883.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( -231, -129 )
focus_mode = 0
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
action_mode = 0
enabled_focus_mode = 0
text = "Save as"

[node name="Close" type="Button" parent="Control/Panel"]
margin_left = 898.0
margin_right = 1024.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( -231, -129 )
focus_mode = 0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
action_mode = 0
enabled_focus_mode = 0
text = "Close File"

[node name="FileName" type="Label" parent="Control/Panel"]
margin_right = 472.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "~"
clip_text = true

[node name="Save" type="FileDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -166.5
margin_right = 298.0
margin_bottom = 166.5
popup_exclusive = true
window_title = "Save your file!"
access = 2

[node name="Open" type="FileDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -166.5
margin_right = 298.0
margin_bottom = 166.5
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2

[connection signal="pressed" from="Control/Panel/Save" to="Control" method="_on_Save_pressed"]
[connection signal="pressed" from="Control/Panel/Open" to="Control" method="_on_Open_pressed"]
[connection signal="pressed" from="Control/Panel/SaveAs" to="Control" method="_on_SaveAs_pressed"]
[connection signal="pressed" from="Control/Panel/Close" to="Control" method="_on_Close_pressed"]
[connection signal="file_selected" from="Control/Save" to="Control" method="_on_Save_file_selected"]
[connection signal="file_selected" from="Control/Open" to="Control" method="_on_Open_file_selected"]
